mod dev readme, xinference_client to xinference-client, resolve warning in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,4 +40,4 @@ dotenv = "dotenv:plugin"
 [[tool.poetry.source]]
 name = "tsinghua"
 url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
-priority = "default"
+priority = "primary"
