--- a/libs/chatchat-server/chatchat/configs/model_providers.yaml
+++ b/libs/chatchat-server/chatchat/configs/model_providers.yaml
@@ -40,10 +40,12 @@ xinference:
 #  provider_credential:
 #    api_key: 'd4fa0690b6dfa205204cae2e12aa6fb6.1'
 
-#ollama:
-#  model_credential:
+ollama:
+  model_credential:
 #    - model: 'llama3'
-#      model_type: 'llm'
-#      model_credentials:
+    - model: 'qwen2-7b'
+      model_type: 'llm'
+      model_credentials:
 #        base_url: 'http://172.21.192.1:11434'
-#        mode: 'completion'
+        base_url: 'http://127.0.0.1:11434'
+        mode: 'completion'
