--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -62,12 +62,12 @@ streamlit-chatbox = "1.1.12.post4"
 streamlit-modal = "0.1.0"
 streamlit-aggrid = "1.0.5"
 streamlit-extras = "0.4.2"
-xinference_client = { version = "^0.11.1", optional = true }
+xinference-client = { version = "^0.11.1", optional = true }
 zhipuai = { version = "^2.1.0", optional = true }
 pymysql = "^1.1.0"
 
 [tool.poetry.extras]
-xinference = ["xinference_client"]
+xinference = ["xinference-client"]
 zhipuai = ["zhipuai"]
 
 # An extra used to be able to add extended testing.
