--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ config/
 /libs/chatchat-server/chatchat/img/*
 /libs/chatchat-server/chatchat/webui.py
 /libs/chatchat-server/chatchat/webui_pages/*
+# metadata
+/libs/chatchat-server/chatchat/server/knowledge_base/model/my_metadatas.py
 
 # below are standard python ignore files
 # Byte-compiled / optimized / DLL files
