--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 config/
 .vscode/
 # UI
-/libs/chatchat-server/chatchat/img/*
+/libs/chatchat-server/chatchat/img/chat_icon_129360.png
+/libs/chatchat-server/chatchat/img/zf_info_logo.png
 /libs/chatchat-server/chatchat/webui.py
 # metadata
 /libs/chatchat-server/chatchat/server/knowledge_base/model/my_metadatas.py
